# project_metaling

./: .gitignore  Cargo.toml  README.md  clippy.toml
config/: EffectTable.json  bundles.toml  headgear_slots.toml  translations.toml  weapon_types.toml
crates/asset_importer/: Cargo.toml  README.md
crates/asset_importer/src/: batch.rs  dump.rs  main.rs  manifest.rs  scan.rs
crates/bevy_ro_maps/: Cargo.toml  README.md
crates/bevy_ro_maps/src/: assets.rs  bgm.rs  heightmap.rs  lib.rs  loader.rs  navigation.rs  navmap.rs  render.rs  terrain_material.rs
crates/bevy_ro_maps/src/shaders/: terrain_lightmap.wgsl
crates/bevy_ro_models/: Cargo.toml  README.md
crates/bevy_ro_models/src/: assets.rs  lib.rs  loader.rs  render.rs
crates/bevy_ro_sounds/: Cargo.toml  README.md
crates/bevy_ro_sounds/src/: lib.rs
crates/bevy_ro_sprites/: Cargo.toml  README.md
crates/bevy_ro_sprites/src/: actor.rs  animation.rs  composite.rs  lib.rs  loader.rs
crates/bevy_ro_sprites/src/shaders/: ro_composite.wgsl
crates/bevy_ro_vfx/: Cargo.toml  README.md
crates/bevy_ro_vfx/src/: cylinder.rs  effect_table.rs  lib.rs  plane_effect.rs  str_effect.rs
crates/game/: Cargo.toml
crates/game/src/: camera_orbit.rs  interaction.rs  main.rs  map_interaction.rs  occlusion_fading.rs  player_control.rs
crates/grf_extractor/: Cargo.toml  README.md
crates/grf_extractor/src/: bundles.rs  headgear_slots.rs  main.rs  rathena.rs  weapon_types.rs
crates/grf_pipeline/: Cargo.toml
crates/grf_pipeline/src/: classify.rs  export.rs  headgear_slots.rs  main.rs  pipeline.rs  rathena.rs  weapon_types.rs
crates/lub_decompiler/: Cargo.toml
crates/lub_decompiler/src/: main.rs
crates/ro_files/: Cargo.toml
crates/ro_files/src/: act.rs  composite.rs  coord.rs  decrypt.rs  gat.rs  gnd.rs  grf.rs  imf.rs  lib.rs  rsm.rs  rsw.rs  spr.rs  str.rs  translate.rs  util.rs  zorder.rs
plans/: str_effects.md  vfx-2d-3d-effects.md  vfx-multi-effect-types.md
util/: setup_assets.sh  translate.py
util/decode/: decode_effect_table.py
util/translate/: README.md  requirements.txt  translate.py
