[workspace]
members = [
    "crates/ro_files",
    "crates/bevy_ro_maps",
    "crates/bevy_ro_models",
    "crates/bevy_ro_sprites",
    "crates/bevy_ro_vfx",
    "crates/asset_importer",
    "crates/grf_extractor",
    "crates/bevy_ro_sounds",
    "crates/game",
    "crates/lub_decompiler",
]
resolver = "3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
