[workspace]
members = [
    "crates/grf_pipeline",
    "crates/game",
    "crates/lub_decompiler",
    "crates/ro_files",
    "crates/bevy_ro_maps",
    "crates/bevy_ro_models",
    "crates/bevy_ro_sprites",
    "crates/bevy_ro_vfx",
    "crates/bevy_ro_sounds",
]
resolver = "3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
