[package]
name = "asset_importer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", features = ["preserve_order"] }
anyhow = "1"
encoding_rs = "0.8"
image = { version = "0.25", default-features = false, features = ["bmp", "png"] }
ro_files = { path = "../ro_files" }
