[package]
name = "bevy_ro_maps"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_render",
    "bevy_asset",
    "bevy_log",
    "bevy_pbr",
    "bevy_picking",
    "png",
    "tga",
] }
ro_files = { path = "../ro_files" }
bevy_ro_models = { path = "../bevy_ro_models" }
bevy_ro_sounds = { path = "../bevy_ro_sounds" }
bevy_ro_vfx = { path = "../bevy_ro_vfx" }
anyhow = "1"
serde_json = "1"
pathfinding = "4.15.0"
