[package]
name = "bevy_ro_models"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_render",
    "bevy_asset",
    "bevy_log",
    "bevy_pbr",
    "bevy_picking",
    "png",
    "tga",
] }
ro_files = { path = "../ro_files" }
anyhow = "1"
