[package]
name = "bevy_ro_vfx"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_render",
    "bevy_asset",
    "bevy_log",
    "bevy_pbr",
    "bevy_picking",
] }
bevy_ro_maps = { path = "../bevy_ro_maps" }
bevy_ro_sprites = { path = "../bevy_ro_sprites" }
serde_json = "1"
