[package]
name = "bevy_ro_vfx"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_render",
    "bevy_asset",
    "bevy_log",
    "bevy_pbr",
    "bevy_picking",
    "tga",
] }
bevy_ro_sprites = { path = "../bevy_ro_sprites" }
bevy_ro_sounds = { path = "../bevy_ro_sounds" }
serde_json = "1"
json5 = "0.4"
