[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18" , features = ["jpeg"]}
bevy_ro_sprites = { path = "../bevy_ro_sprites" }
bevy_ro_maps = { path = "../bevy_ro_maps" }
bevy_ro_models = { path = "../bevy_ro_models" }
bevy_ro_vfx = { path = "../bevy_ro_vfx" }
bevy_ro_sounds = { path = "../bevy_ro_sounds" }
serde_json = "1"
